@@ -7,6 +7,7 @@ documents those changes that are of interest to users and administrators.
  -- slurmstepd modified to pre-load all relevant plugins at startup to avoid
     the possibility of modified plugins later resulting in inconsistent API
     or data structures and a failure of slurmstepd.
+ -- Export functions from parse_time.c in libslurm.so.
 
 * Changes in Slurm 16.05.4
 ==========================
